# qscli

./: Cargo.toml  README.md
.github/: deploy.yml  rust.yml
.github/workflows/: deploy.yml  rust.yml
sensor-api/: Cargo.toml  README.md
sensor-api/.openapi-generator/: FILES
sensor-api/docs/: AdminApi.md  BrokerConfig.md  DataProduct.md  DataProductQueryResult.md  EventApi.md  FrontendSettings.md  FrontendSettingsUpdate.md  Group.md  GroupApi.md  GroupCreate.md  GroupMember.md  GroupUpdate.md  InfluxData.md  InfluxDbConnection.md  InfluxDbConnectionCreate.md  InfluxDbConnectionUpdate.md  MeasurementQuery.md  MeasurementResult.md  Permission.md  PermissionLevel.md  Sensor.md  SensorGroupAdd.md  SensorGroupUpdate.md  SensorListResponse.md  SensorWarning.md  SensorWarnings.md  SensorsApi.md  SupportedFrontendColorThemes.md  SupportedFrontendLanguages.md  SupportedFrontendUnitSystem.md  Token.md  User.md  UserAuthenticate.md  UserCreate.md  UserMail.md  UserSelfUpdate.md  UserSuperuserUpdate.md  UsersApi.md  UtilApi.md  ValidationError.md
sensor-api/src/apis/: admin_api.rs  configuration.rs  event_api.rs  group_api.rs  mod.rs  sensors_api.rs  users_api.rs  util_api.rs
sensor-api/src/models/: broker_config.rs  data_product.rs  data_product_query_result.rs  frontend_settings.rs  frontend_settings_update.rs  group.rs  group_create.rs  group_member.rs  group_update.rs  http_validation_error.rs  influx_data.rs  influx_db_connection.rs  influx_db_connection_create.rs  influx_db_connection_update.rs  location_inner.rs  mod.rs  (+21 more)
src/: api.rs  cli.rs  main.rs  scan.rs
