[package]
name = "qscli"
version = "0.1.0"
edition = "2021"

[dependencies]
cidr = "0.3.0"
local-ip-address = "0.6.3"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
dotenvy = "0.15.7"
sensor_api = {path = "sensor-api" }
